# grasp

./: .gitignore  AGENTS.md  CLAUDE.md  README.ja.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude/commands/: ship-next.md
docs/: authority-modes.md  cosense.md  markdown.md  persona2a-demo.md
examples/persona2a-vault/: Agent Memory.md  Context Budget.md  Ingestion Pipeline.md  Log.md  (+4 more)
grasp/: __init__.py  cli.py  cosense.py  cosense_cli.py  forest.py  journal.py  markdown.py  sqlite_store.py
scripts/: benchmark_claim_retry_throughput.py  check_file_back_postwrite.py  check_file_back_preflight.py  check_file_back_runbook.py  check_file_back_write_start.py  check_mode2_markdown_readonly.py  check_projection_policy.py  check_push_ownership.py  check_wiki_version_ledger.py  lint_wiki.py
tests/: test_claim_retry_throughput_benchmark.py  test_cli_help.py  test_cosense.py  test_cosense_cli.py  test_file_back_postwrite_script.py  test_file_back_preflight_script.py  test_file_back_runbook_script.py  test_file_back_write_start_script.py  test_forest.py  test_git_history_replay.py  test_journal.py  test_markdown.py  test_mode2_markdown_readonly_script.py  test_persona2a_demo.py  test_projection_policy_script.py  test_push_ownership_script.py  test_sqlite_store.py  test_version_metadata.py  test_wiki_version_ledger_script.py
wiki/: SPEC.md  grasp-backlog.md  history.md  index.md  llm-wiki-infra-fast-path-plan.md  log.md  parallel-agent-substrate-goal.md  sqlite-ssot-write-plan.md  v1-todo.md
wiki.grasp/: events.jsonl
(+47 files in other folders)
