[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grasp"
version = "1.7.20"
description = "CLI for reading a local Scrapbox/Cosense-style graph knowledge store"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.scripts]
grasp = "grasp.cli:main"

[tool.setuptools.packages.find]
include = ["grasp*"]
